--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nebular/eva-icons": "4.0.0",
     "@nebular/theme": "^4.0.0",
     "eva-icons": "^1.1.1",
+    "ngx-lightbox": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
