--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.0.0",
     "@nebular/eva-icons": "4.0.0",
     "@nebular/theme": "^4.0.0",
+    "bja-xrp-donations": "^0.1.0",
     "eva-icons": "^1.1.1",
     "ngx-lightbox": "^2.0.0",
     "rxjs": "~6.4.0",
